added links to mobile-menu-component

--- a/src/app/hero/header/header.component.html
+++ b/src/app/hero/header/header.component.html
@@ -25,6 +25,7 @@
 			<img src="assets/icons/link_check_radio_button.png" alt="Point">
 		</div>
 	</div>
+	<app-mobile-menu></app-mobile-menu>
 </div>
 
 <div class="header-logo-container">
