--- a/src/app/hero/header/mobile-menu/mobile-menu.component.html
+++ b/src/app/hero/header/mobile-menu/mobile-menu.component.html
@@ -1,6 +1,30 @@
 <div class="menu-container">
-	<p>bla</p>
-	<p>bla</p>
-	<p>bla</p>
-	<p>bla</p>
+	<div class="link-point-wrapper">
+		<div class="mobile-button">
+			<a href="#about-me-container">{{ translationService.getTranslation('header', 'aboutMe') }}</a>
+		</div>
+
+		<div id="header-about-me-point-container" class="header-point-container">
+			<img src="assets/icons/link_check_radio_button.png" alt="Point">
+		</div>
+	</div>
+	<div class="link-point-wrapper">
+		<div class="mobile-button">
+			<a href="#technologies-content-container">{{ translationService.getTranslation('header', 'skills') }}</a>
+		</div>
+		<div id="header-skills-point-container" class="header-point-container">
+			<img src="assets/icons/link_check_radio_button.png" alt="Point">
+		</div>
+	</div>
+	<div class="link-point-wrapper">
+		<div class="mobile-button">
+			<a href="#featured-projects">{{ translationService.getTranslation('header', 'projects') }}</a>
+		</div>
+		<div id="header-projects-point-container" class="header-point-container">
+			<img src="assets/icons/link_check_radio_button.png" alt="Point">
+		</div>
+	</div>
+	<div class="mobile-button" id="mobile-language-switch" (click)="toggleLanguage()"
+		[class.german]="translationService.isGerman$ | async"></div>
+
 </div>
