--- a/src/app/hero/header/header.component.html
+++ b/src/app/hero/header/header.component.html
@@ -1,39 +1,49 @@
-<div class="header-button-container">
-	<div class="header-button" id="language-switch" (click)="toggleLanguage()"
-		[class.german]="translationService.isGerman$ | async"></div>
-	<div class="link-point-wrapper">
-		<div class="header-button">
-			<a href="#about-me-container">{{ translationService.getTranslation('header', 'aboutMe') }}</a>
+<div class="header-main-row">
+	<div class="header-button-container">
+		<div class="header-button" id="language-switch" (click)="toggleLanguage()"
+			[class.german]="translationService.isGerman$ | async"></div>
+		<div class="link-point-wrapper">
+			<div class="header-button">
+				<a href="#about-me-container">{{ translationService.getTranslation('header', 'aboutMe') }}</a>
+			</div>
+			<div id="header-about-me-point-container" class="header-point-container">
+				<img src="assets/icons/link_check_radio_button.png" alt="Point">
+			</div>
 		</div>
-		<div id="header-about-me-point-container" class="header-point-container">
-			<img src="assets/icons/link_check_radio_button.png" alt="Point">
+		<div class="link-point-wrapper">
+			<div class="header-button">
+				<a href="#technologies-content-container">{{ translationService.getTranslation('header', 'skills')
+					}}</a>
+			</div>
+			<div id="header-skills-point-container" class="header-point-container">
+				<img src="assets/icons/link_check_radio_button.png" alt="Point">
+			</div>
 		</div>
+		<div class="link-point-wrapper">
+			<div class="header-button">
+				<a href="#featured-projects">{{ translationService.getTranslation('header', 'projects') }}</a>
+			</div>
+			<div id="header-projects-point-container" class="header-point-container">
+				<img src="assets/icons/link_check_radio_button.png" alt="Point">
+			</div>
+		</div>
+		<app-mobile-menu></app-mobile-menu>
 	</div>
-	<div class="link-point-wrapper">
-		<div class="header-button">
-			<a href="#technologies-content-container">{{ translationService.getTranslation('header', 'skills') }}</a>
-		</div>
-		<div id="header-skills-point-container" class="header-point-container">
-			<img src="assets/icons/link_check_radio_button.png" alt="Point">
-		</div>
-	</div>
-	<div class="link-point-wrapper">
-		<div class="header-button">
-			<a href="#featured-projects">{{ translationService.getTranslation('header', 'projects') }}</a>
-		</div>
-		<div id="header-projects-point-container" class="header-point-container">
-			<img src="assets/icons/link_check_radio_button.png" alt="Point">
-		</div>
-	</div>
-	<app-mobile-menu></app-mobile-menu>
-</div>
 
-<div class="header-logo-container">
-	<div class="header-logo">
-		<img src="favicon_dark_theme.png" alt="Logo">
+	<div class="header-logo-container">
+		<div class="header-logo">
+			<img src="favicon_dark_theme.png" alt="Logo">
+		</div>
+		<div class="header-name-container">
+			<div class="header-logo-first-name">Dennis</div>
+			<div class="header-logo-last-name">Jakobi</div>
+		</div>
 	</div>
-	<div class="header-name-container">
-		<div class="header-logo-first-name">Dennis</div>
-		<div class="header-logo-last-name">Jakobi</div>
+
+	<div class="burger-menu-wrapper" (click)="toggleMobileMenu()" #burgerMenu>
+		<div class="burger-menu-img"></div>
+
 	</div>
 </div>
+<app-mobile-menu *ngIf="mobileMenuOpen" [style.position]="'absolute'" [style.right.px]="24"
+	[style.top.px]="72"></app-mobile-menu>
