--- a/src/app/hero/header/header.component.scss
+++ b/src/app/hero/header/header.component.scss
@@ -111,6 +111,14 @@
   filter: invert(1);
 }
 
+.header-main-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  position: relative;
+}
+
 @media (max-width: 1300px) {
   :host {
     width: 100vw;
@@ -132,5 +140,57 @@
 
   .header-name-container {
     font-size: 16px;
+  }
+}
+
+@media (max-width: 550px) {
+  .header-button-container {
+    display: none;
+  }
+
+  .header-main-row {
+    width: 100vw;
+    padding-left: 24px;
+    padding-right: 24px;
+    height: 72px;
+  }
+
+  .header-logo-container {
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0;
+  }
+
+  .header-logo {
+    > img {
+      display: block;
+    }
+  }
+
+  .header-name-container {
+    display: none;
+  }
+
+  .burger-menu-wrapper {
+    display: block;
+    position: static;
+    width: 48px;
+    height: 48px;
+    cursor: pointer;
+
+    .burger-menu-img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      background-image: url("../../../../public/assets/icons/burger_menu_default.png");
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      transition: all 0.3s ease-in-out;
+
+      &:hover {
+        background-image: url("../../../../public/assets/icons/burger_menu_hover.png");
+      }
+    }
   }
 }
