--- a/src/app/hero/header/header.component.scss
+++ b/src/app/hero/header/header.component.scss
@@ -9,11 +9,11 @@
 
 .header-button-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: flex-start;
 
-  width: 460px;
-  height: 28px;
+  width: 100%;
+  height: 48px;
   gap: 24px;
   color: rgba(255, 255, 255, 1);
 
@@ -123,19 +123,8 @@
   :host {
     width: 100vw;
     max-width: 1300px;
-    padding-left: 24px;
-    padding-right: 24px;
     margin: 0 auto;
     position: relative;
-  }
-
-  .header-button-container {
-    width: 380px;
-    gap: 12px;
-  }
-
-  .header-logo-container {
-    transform: scale(0.85);
   }
 
   .header-name-container {
@@ -143,16 +132,13 @@
   }
 }
 
-@media (max-width: 550px) {
-  .header-button-container {
-    display: none;
-  }
-
-  .header-main-row {
-    width: 100vw;
+@media (max-width: 670px) {
+  :host {
     padding-left: 24px;
     padding-right: 24px;
-    height: 72px;
+  }
+  .header-button-container {
+    display: none;
   }
 
   .header-logo-container {
@@ -169,6 +155,14 @@
 
   .header-name-container {
     display: none;
+  }
+
+  .header-menu-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    height: 100%;
   }
 
   .burger-menu-wrapper {
