added mediaquery 360 to hero-component

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -22,8 +22,20 @@
 			</div>
 		</div>
 		<div class="hero-container-right flex-col-j-fe">
-			<div class="hero-container-email-right"><a
-					href="mailto:dennis.jakobi76@gmail.com">dennis.jakobi76&#64;gmail.com</a></div>
+
+			<div class="hero-container-email-right"><a id="hero-email-link"
+					href="mailto:dennis.jakobi76@gmail.com">dennis.jakobi76&#64;gmail.com</a>
+
+				<div class="hero-container-social-medialink" id="hero-mobile-email-link">
+					<a id="mobile-email-link" href="mailto:dennis.jakobi76@gmail.com">
+						<div id="mobile-mail-icon"></div>
+					</a>
+					<div class="link-check-point" id="email-point-container"><img
+							src="assets/icons/link_check_radio_button.png" alt="Point" id="email-point"></div>
+				</div>
+
+			</div>
+
 			<div class="hero-link-checkpoint-wrapper">
 				<div class="hero-container-social-media-link" id="hero-github-link"><a
 						href="https://github.com/DennisJakobi76" target="_blank"></a></div>
