--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -181,3 +181,13 @@ p {
     height: 50px;
   }
 }
+
+@media (max-width: 350px) {
+  .tech-skill-icon-container {
+    gap: 20px;
+  }
+
+  .skill-icon-and-title-container {
+    margin-bottom: 8px;
+  }
+}
