added media query to references-component and reference-card-component

--- a/src/app/references/references.component.html
+++ b/src/app/references/references.component.html
@@ -2,6 +2,7 @@
 
 <div class="carousel-shadow-wrapper">
 	<div class="carousel-overlay">
+		<div class="overlay-anchor"></div>
 		<img src="assets/icons/quotes.png" alt="Quotes Icon" />
 	</div>
 	<div class="carousel-track" [ngClass]="slideDirection">
