--- a/src/app/references/reference-card/reference-card.component.scss
+++ b/src/app/references/reference-card/reference-card.component.scss
@@ -38,3 +38,13 @@
     color: rgba(255, 255, 255, 1);
   }
 }
+
+@media (max-width: 1240px) {
+  .reference-card-container {
+    // width: 100%;
+    // scale: 0.8;
+    // height: auto;
+    padding: 20px;
+    // margin-top: 80px;
+  }
+}
