--- a/src/app/references/references.component.scss
+++ b/src/app/references/references.component.scss
@@ -46,10 +46,25 @@ h2 {
   z-index: 1;
   pointer-events: none;
 
+  .overlay-anchor {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 632px; // Card-Breite
+    height: 1px;
+    transform: translateX(-50%);
+    pointer-events: none;
+  }
+
   > img {
     position: absolute;
     top: 3px;
-    left: 355px;
+    left: 50%;
+    transform: translateX(-50%) translateX(-316px);
+    height: 54px;
+    width: 54px;
+    z-index: 2;
+    pointer-events: none;
   }
 }
 
@@ -60,11 +75,6 @@ h2 {
   align-items: center;
   gap: 24px;
   margin-top: 24px;
-
-  .control-points {
-    display: flex;
-    gap: 32px;
-  }
 
   .control-point {
     width: 8px;
@@ -155,5 +165,40 @@ h2 {
   100% {
     transform: translateX(33.33%) scale(0.8);
     opacity: 0.5;
+  }
+}
+
+@media (max-width: 1240px) {
+  :host {
+    max-width: 100%;
+    height: auto;
+  }
+  h2 {
+    font-size: 24px;
+    text-align: center;
+  }
+
+  .carousel-shadow-wrapper {
+    width: 100%;
+  }
+  .carousel-overlay {
+    width: 100%;
+    .overlay-anchor {
+      width: 362px; // neue Card-Breite
+    }
+    > img {
+      left: 50%;
+      transform: translateX(-50%) translateX(-316x);
+    }
+  }
+
+  .carousel-controls-container {
+    gap: 16px !important;
+  }
+}
+
+@media (max-width: 900px) {
+  .carousel-track {
+    gap: -200px;
   }
 }
