--- a/src/app/references/reference-card/reference-card.component.scss
+++ b/src/app/references/reference-card/reference-card.component.scss
@@ -39,12 +39,24 @@
   }
 }
 
-@media (max-width: 1240px) {
+@media (max-width: 700px) {
   .reference-card-container {
-    // width: 100%;
     // scale: 0.8;
-    // height: auto;
-    padding: 20px;
-    // margin-top: 80px;
+    width: 320px;
+    height: 240px;
+
+    .reference-card-text-container {
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 120%;
+      letter-spacing: 0%;
+    }
+
+    .reference-card-author-name {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 120%;
+      letter-spacing: 0%;
+    }
   }
 }
