--- a/src/app/references/reference-card/reference-card.component.scss
+++ b/src/app/references/reference-card/reference-card.component.scss
@@ -60,3 +60,25 @@
     }
   }
 }
+
+@media (max-width: 390px) {
+  .reference-card-container {
+    // scale: 0.8;
+    width: 300px;
+    height: 220px;
+
+    .reference-card-text-container {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 120%;
+      letter-spacing: 0%;
+    }
+
+    .reference-card-author-name {
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 120%;
+      letter-spacing: 0%;
+    }
+  }
+}
