fixed a bug that put project-details-card over the confirm-privacy-policy even when it is not visible

--- a/src/app/portfolio/project-details-card/project-details-card.component.html
+++ b/src/app/portfolio/project-details-card/project-details-card.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isVisible" class="project-details-container">
+<div class="project-details-container">
 	<div id="project-details-card-left-side" class="project-details-card-side-wrapper">
 		<div class="details-card-id-and-title-container">
 			<span class="details-card-id">{{projectDetails.id}}</span>
