--- a/src/app/portfolio/projects/projects.component.html
+++ b/src/app/portfolio/projects/projects.component.html
@@ -73,4 +73,7 @@
 	</div>
 </div>
 
-<app-project-details-card></app-project-details-card>
+<app-project-details-card
+  *ngIf="isProjectDetailsVisible"
+  (close)="closeDetails()">
+</app-project-details-card>
