--- a/src/app/cards/info-card/info-card.component.scss
+++ b/src/app/cards/info-card/info-card.component.scss
@@ -1,5 +1,6 @@
 :host {
-  margin-top: 98px;
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 h3 {
@@ -32,7 +33,7 @@ h3 {
   text-align: justify;
 
   > h1 {
-    font-size: 64px;
+    font-size: 56px;
     font-weight: 700;
     line-height: 100%;
     letter-spacing: -3%;
@@ -68,7 +69,7 @@ h3 {
 
   .info-card-body {
     > h1 {
-      font-size: 56px;
+      font-size: 48px;
       line-height: 80%;
       letter-spacing: -3%;
     }
