--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -26,8 +26,8 @@
 
 .impress-card-close-btn-container {
   position: absolute;
-  top: 48px;
-  right: 48px;
+  top: 0px;
+  right: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -67,4 +67,24 @@
   justify-content: flex-start;
   align-items: flex-start;
   gap: 24px;
+
+  word-break: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+@media (max-width: 1300px) {
+  :host {
+    width: 95%;
+  }
+  .imprint-container {
+    width: 100%;
+    height: 100%;
+    padding: 48px;
+  }
+  .content-wrapper {
+    font-size: smaller;
+  }
 }
