--- a/src/app/references/references.component.scss
+++ b/src/app/references/references.component.scss
@@ -168,87 +168,4 @@ h2 {
   }
 }
 
-@media (max-width: 1240px) {
-  :host {
-    max-width: 100%;
-    height: auto;
-  }
-  h2 {
-    font-size: 24px;
-    text-align: center;
-  }
-
-  .carousel-shadow-wrapper {
-    width: 100%;
-  }
-  .carousel-overlay {
-    width: 100%;
-    .overlay-anchor {
-      width: 362px;
-    }
-    > img {
-      left: 50%;
-      transform: translateX(-50%) translateX(-316px);
-    }
-  }
-
-  .carousel-controls-container {
-    gap: 16px;
-  }
-}
-
-@media (max-width: 700px) {
-  :host {
-    gap: 24px;
-  }
-  h2 {
-    align-self: center;
-    width: 320px;
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 100%;
-    letter-spacing: 0%;
-  }
-  .carousel-overlay {
-    .overlay-anchor {
-      width: 320px;
-    }
-    > img {
-      width: 40px;
-      height: 40px;
-      top: 10px;
-      left: 50%;
-      transform: translateX(-50%) translateX(-138px);
-    }
-  }
-
-  .carousel-controls-container {
-    margin: 0;
-    gap: 12px;
-  }
-}
-
-@media (max-width: 390px) {
-  :host {
-    gap: 18px;
-  }
-  h2 {
-    font-size: 20px;
-  }
-  .carousel-overlay {
-    .overlay-anchor {
-      width: 300px;
-    }
-    > img {
-      width: 32px;
-      height: 32px;
-      top: 24px;
-      left: 50%;
-      transform: translateX(-50%) translateX(-138px);
-    }
-  }
-
-  .carousel-controls-container {
-    margin-top: -16px;
-  }
-}
+@import "./references-media-queries.scss";
