--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -90,27 +90,4 @@ img {
   height: 32px;
 }
 
-@media (max-width: 1140px) {
-  img {
-    width: 358px;
-    height: 358px;
-  }
-}
-
-@media (max-width: 770px) {
-  :host {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .about-me-info-card {
-    transform: translateY(0);
-  }
-}
-
-@media (max-width: 375px) {
-  img {
-    width: 304px;
-    height: 304px;
-  }
-}
+@import "./about-me-media-queries.scss";
