--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -97,55 +97,4 @@
   }
 }
 
-@media (max-width: 700px) {
-  :host {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    height: auto;
-  }
-
-  .footer-parts {
-    width: 45%;
-    position: static;
-    transform: none;
-  }
-
-  .footer-parts:nth-child(1) {
-    order: 1;
-  }
-
-  .footer-parts:nth-child(3) {
-    order: 2;
-    margin-left: 0;
-  }
-
-  .footer-parts:nth-child(2) {
-    order: 3;
-    width: 100%;
-    position: static;
-    transform: none;
-    justify-content: center;
-    align-items: center;
-    margin-top: 32px;
-    margin-bottom: 32px;
-  }
-}
-
-@media (max-width: 480px) {
-  :host {
-    padding-left: 24px;
-    padding-right: 24px;
-  }
-
-  .footer-short-info {
-    font-size: 14px;
-  }
-
-  .footer-link-wrapper {
-    > a {
-      font-size: 14px;
-      white-space: nowrap;
-    }
-  }
-}
+@import "./footer-media-queries.scss";
