--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -52,65 +52,4 @@
   }
 }
 
-@media (max-width: 1300px) {
-  .portfolio-header {
-    padding: 20px;
-    margin-top: 80px;
-  }
-}
-
-@media (max-width: 1240px) {
-  :host {
-    padding: 0;
-    justify-content: flex-start;
-  }
-
-  .portfolio-header {
-    padding: 40px;
-  }
-}
-
-@media (max-width: 900px) {
-  .portfolio-header {
-    margin-top: 160px;
-  }
-}
-
-@media (max-width: 800px) {
-  .portfolio-header {
-    margin-top: 240px;
-  }
-}
-
-@media (max-width: 780px) {
-  .portfolio-header {
-    margin-top: 320px;
-  }
-}
-
-@media (max-width: 770px) {
-  .portfolio-header {
-    margin-top: 80px;
-
-    > h2 {
-      font-size: 18px;
-      line-height: 100%;
-      letter-spacing: 0%;
-    }
-
-    > h1 {
-      font-size: 56px;
-      line-height: 100%;
-      letter-spacing: -3%;
-    }
-
-    > p {
-      width: 100%;
-      font-size: 16px;
-      line-height: 120%;
-      letter-spacing: 0%;
-      text-align: justify;
-      margin-top: 20px;
-    }
-  }
-}
+@import "./portfolio-media-queries.scss";
